[gd_scene load_steps=8 format=2]

[ext_resource path="res://godot_component/button/NewGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://projet_logo.png" type="Texture" id=2]
[ext_resource path="res://godot_component/button/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://godot_component/button/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://godot_component/button/OptionButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://script/MenuButton.gd" type="Script" id=6]
[ext_resource path="res://godot_component/static_obj/BackControl.tscn" type="PackedScene" id=7]

[node name="Menu" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="." instance=ExtResource( 7 )]

[node name="menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = 1054.0
margin_bottom = 698.0
rect_min_size = Vector2( 994, 570 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="menu"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="menu/HBoxContainer2"]
margin_right = 600.0
margin_bottom = 600.0
custom_constants/separation = 10
alignment = 1

[node name="NewGameButton" parent="menu/HBoxContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 185.0
margin_right = 600.0
margin_bottom = 235.0

[node name="ContinueButton" parent="menu/HBoxContainer2/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 245.0
margin_right = 600.0
margin_bottom = 295.0

[node name="OptionButton" parent="menu/HBoxContainer2/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 305.0
margin_right = 600.0
margin_bottom = 355.0

[node name="ExitButton" parent="menu/HBoxContainer2/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 365.0
margin_right = 600.0
margin_bottom = 415.0

[node name="projet_logo" type="Sprite" parent="."]
position = Vector2( 636.194, 182.127 )
texture = ExtResource( 2 )
[connection signal="pressed" from="menu/HBoxContainer2/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="menu/HBoxContainer2/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="menu/HBoxContainer2/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="menu/HBoxContainer2/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
